--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dashboard/css/style.css">
     <!-- icon bootsrap 5 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Hello, world!</title>
@@ -115,7 +115,7 @@
 
 
 
-    <script src="script.js"></script>
+    <script src="dashboard/js/script.js"></script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
